updatign BeerOrderLineDto with Beer information from beer service

--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <groupId>com.studies</groupId>
     <artifactId>mssc-beer-order-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>MSSC Beer Order Service</name>
+    <name>mssc-beer-order-service</name>
     <description>MSSC Beer Order Service</description>
 
     <licenses>
