--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
 logging.level.guru=debug
 server.port=8081
 sfg.brewery.beer-service-host=http://localhost:8080
+
+spring.datasource.username=beer_order_service
+spring.datasource.password=password
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/beerorderservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.jpa.database=mysql
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
