--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,7 +4,7 @@ sfg.brewery.beer-service-host=http://localhost:8080
 
 spring.datasource.username=beer_order_service
 spring.datasource.password=password
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/beerorderservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/beerorderservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
 spring.jpa.database=mysql
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialog=org.hibernate.dialect.MySQL8Dialect
