fix errors in processing allocation response

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
-logging.level.guru=debug
+logging.level.studies=debug
 server.port=8081
-sfg.brewery.beer-service-host=http://localhost:8080
+studies.brewery.beer-service-host=http://localhost:8080
 
 spring.datasource.username=beer_order_service
 spring.datasource.password=password
@@ -30,3 +30,5 @@ logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 # defaults for this docker image - vromero/activemq-artemis
 spring.artemis.user=artemis
 spring.artemis.password=simetraehcapa
+spring.jackson.serialization.write-dates-as-timestamps=false
+spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
