--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+spring.application.name=order-service
 logging.level.studies=debug
 server.port=8081
 studies.brewery.beer-service-host=http://localhost:8080
