--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=order-service
-logging.level.studies=debug
+#logging.level.studies=debug
 server.port=8081
 studies.brewery.beer-service-host=http://localhost:8080
 
