adding creds for eureka

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -37,3 +37,5 @@ spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
 
 spring.zipkin.baseUrl= http://localhost:9411/
+
+eureka.client.service-url.defaultZone=http://netflix:eureka@localhost:8761/eureka
