adding docker build and update of bom

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -25,6 +25,9 @@ spring.datasource.hikari.data-source-properties.maintainTimeStats=false
 
 spring.cloud.discovery.enabled=false
 
+# Spring Data hangs when not set under Spring Boot 2.3.0
+spring.data.jpa.repositories.bootstrap-mode=default
+
 # Enable logging for config troubleshooting
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
