--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,44 +1,21 @@
-spring.application.name=order-service
-#logging.level.studies=debug
 server.port=8081
+spring.application.name=order-service
+
 studies.brewery.beer-service-host=http://localhost:8080
+studies.tasting.room.rate=500
 
-spring.datasource.username=beer_order_service
-spring.datasource.password=password
-spring.datasource.url=jdbc:mysql://localhost:3306/beerorderservice?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-spring.jpa.database=mysql
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialog=org.hibernate.dialect.MySQL8Dialect
-
-spring.datasource.hikari.maximum-pool-size=5
-
-spring.datasource.hikari.data-source-properties.cachePrepStmts=true
-spring.datasource.hikari.data-source-properties.prepStmtCacheSize=250
-spring.datasource.hikari.data-source-properties.prepStmtCacheSqlLimit=2048
-spring.datasource.hikari.data-source-properties.useServerPrepStmts=true
-spring.datasource.hikari.data-source-properties.useLocalSessionState=true
-spring.datasource.hikari.data-source-properties.rewriteBatchedStatements=true
-spring.datasource.hikari.data-source-properties.cacheResultSetMetadata=true
-spring.datasource.hikari.data-source-properties.cacheServerConfiguration=true
-spring.datasource.hikari.data-source-properties.elideSetAutoCommits=true
-spring.datasource.hikari.data-source-properties.maintainTimeStats=false
-
-spring.cloud.discovery.enabled=false
-
-# Spring Data hangs when not set under Spring Boot 2.3.0
-spring.data.jpa.repositories.bootstrap-mode=default
-
-# Enable logging for config troubleshooting
-#logging.level.org.hibernate.SQL=DEBUG
-#logging.level.com.zaxxer.hikari.HikariConfig=DEBUG
-#logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-
-# defaults for this docker image - vromero/activemq-artemis
-spring.artemis.user=artemis
-spring.artemis.password=simetraehcapa
 spring.jackson.serialization.write-dates-as-timestamps=false
 spring.jackson.serialization.write-date-timestamps-as-nanoseconds=true
 
-spring.zipkin.baseUrl= http://localhost:9411/
+logging.level.org.springframework.statemachine.support=error
+logging.level.com.studies=debug
+#logging.level.org.apache.http=debug
 
-eureka.client.service-url.defaultZone=http://netflix:eureka@localhost:8761/eureka
+spring.zipkin.enabled=false    
+spring.cloud.discovery.enabled=false
+# defaults for this docker image - vromero/activemq-artemis
+spring.artemis.user=artemis
+spring.artemis.password=simetraehcapa
+
+# Spring Data hangs when not set under Spring Boot 2.3.0
+spring.data.jpa.repositories.bootstrap-mode=default
