--- a/pom.xml
+++ b/pom.xml
@@ -40,4 +40,23 @@
         </repository>
     </repositories>
 
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.0.0-M4</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
+
+    <scm>
+        <connection>scm:git:git@github.com:RafhaelSouza/mssc-beer-order-service.git</connection>
+        <developerConnection>scm:git:git@github.com:RafhaelSouza/mssc-beer-order-service.git</developerConnection>
+        <url>https://github.com/RafhaelSouza/mssc-beer-order-service</url>
+        <tag>HEAD</tag>
+    </scm>
+
 </project>
