--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
     <modelVersion>4.0.0</modelVersion>
 
     <parent>
-        <groupId>io.github.RafhaelSouza</groupId>
+        <groupId>io.github.rafhael-s-p</groupId>
         <artifactId>mssc-brewery-bom</artifactId>
-        <version>1.0.1</version>
+        <version>1.0.0</version>
     </parent>
 
     <artifactId>mssc-beer-order-service</artifactId>
@@ -53,9 +53,9 @@
     </build>
 
     <scm>
-        <connection>scm:git:git@github.com:RafhaelSouza/mssc-beer-order-service.git</connection>
-        <developerConnection>scm:git:git@github.com:RafhaelSouza/mssc-beer-order-service.git</developerConnection>
-        <url>https://github.com/RafhaelSouza/mssc-beer-order-service</url>
+        <connection>scm:git:git@github.com:rafhael-s-p/mssc-beer-order-service.git</connection>
+        <developerConnection>scm:git:git@github.com:rafhael-s-p/mssc-beer-order-service.git</developerConnection>
+        <url>https://github.com/rafhael-s-p/mssc-beer-order-service</url>
         <tag>HEAD</tag>
     </scm>
 
